# requiem-discord

./: .gitignore  LICENSE  README.md  TODO.md  config.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.github/workflows/: build.yml  ci.yml  deploy.yml
src/: bot.py  config.py  main.py  utils.py
src/audit/: common.py  constants.py  formatters.py  handlers.py  registry.py  utils.py
src/cogs/commands/: ask.py  lookup.py  purge.py  register.py  registration.py  verification.py
src/cogs/events/: audit_log_entry_create.py  connect.py  disconnect.py  ready.py  resumed.py
src/core/: __init__.py  ai.py  bot.py  config.py  console.py  database.py  utils.py
src/core/cogs/events/: connect.py
src/database/: database.py  models.py
src/database/repositories/: user_repository.py
src/models/: __init__.py  user.py
src/repositories/: user.py
src/requiem_api/: client.py  exceptions.py  models.py
src/services/: registration.py
src/ui/: embeds.py
